--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,10 @@
 kotlin.code.style=official
+
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
+
+fabric_api_version=0.130.0+1.21.8
+fabric_kotlin_version=1.13.4+kotlin.2.2.0
+
+mod_version=1.2
